fixed rematch styling got rid of all $apply and switched to $timeout, also made phaser on action call backs happen inside $timeout fixed re-routing after certain phase jumps

--- a/ui/app/styles/default/buttons.scss
+++ b/ui/app/styles/default/buttons.scss
@@ -78,6 +78,7 @@
 
 .button-rematch {
   background-color: $paler_green;
+  color: black;
 }
 
 .button-norematch {
